fixing styles so that elements in the list mode at Explore page are vertically aligned

--- a/src/components/explore/DatasetListHeader/style.scss
+++ b/src/components/explore/DatasetListHeader/style.scss
@@ -14,7 +14,7 @@
     justify-content: flex-start;
   }
 
-  .c-button {
+  button{
 
     fill: $color-grey;
 
