--- a/src/components/explore/DatasetWidget/style.scss
+++ b/src/components/explore/DatasetWidget/style.scss
@@ -29,8 +29,6 @@
 
   &.-list {
 
-    border-top: 1px solid $border-color-1;
-
     .info {
       flex-direction: row;
 
